# CS180-Group-Project

./: .gitignore  CMakeLists.txt  FRQLLM.py  package-lock.json  package.json  quiz.json  students.json  teachers.json
.github/workflows/: main.yml
SQLite/: Database.cpp  Database.h  database1.cpp
backend/: CMakeLists.txt  quiz.json
backend/header/: Account.h  AccountStorage.h  Classroom.h  JSONQuizReader.h  Quiz.h  Student.h  Teacher.h  TeacherAccountStorage.h  md5.h
backend/jinfo/: students.json
backend/src/: Account.cpp  AccountStorage.cpp  CMakeLists.txt  Classroom.cpp  JSONQuizReader.cpp  Quiz.cpp  Student.cpp  Teacher.cpp  TeacherAccountStorage.cpp  etc-shadow.txt  main.cpp  md5.cpp
backend/test/: AccountTests.cpp  CMakeLists.txt  ClassroomTests.cpp  JSONQuizReaderTests.cpp  TeacherTests.cpp
frontend/: package-lock.json  package.json
frontend/src/: App.js  classroomMenuPage.jsx  loginPage.jsx  quizMenuPage.jsx  quizResultPage.jsx  studentMenuPage.jsx  teacherMenuPage.jsx
header/: Account.h  Classroom.h  CommunicableProcess.h  FreeWriteHandler.h  FreeWriteModelHandler.h  JSONQuizReader.h  Quiz.h  Student.h  StudentAccountStorage.h  Teacher.h  md5.h
src/: Account.cpp  AccountStorage.cpp  App.js  CMakeLists.txt  Classroom.cpp  CommunicableProcess.cpp  JSONQuizReader.cpp  Quiz.cpp  Student.cpp  StudentAccountStorage.cpp  Teacher.cpp  classroomMenuPage.jsx  gptFreeResponse.py  json.cpp  loginPage.jsx  md5.cpp  quizMenuPage.jsx  quizResultPage.jsx  studentMenuPage.jsx  teacherMenuPage.jsx
test/: AccountTests.cpp  CMakeLists.txt  CommunicableProcessTests.cpp  JSONQuizReaderTests.cpp  QuizTests.cpp  StudentTests.cpp  TeacherTests.cpp
